--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
   <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
   <link rel="stylesheet" href="src/sass/main.scss" />
+
   <script defer src="src/js/controller.js"></script>
 
-  <title>forkify // Search over 1,000,000 recipes</title>
+  <title>forkify | Search over 1,000,000 recipes</title>
 </head>
+
 
 <body>
   <div class="container">
+
+    <!-- Header bar -->
     <header class="header">
       <img src="src/img/logo.png" alt="Logo" class="header__logo" />
       <form class="search">
@@ -78,6 +82,7 @@
       </nav>
     </header>
 
+    <!-- Recipe search results list -->
     <div class="search-results">
       <ul class="results">
 
@@ -121,6 +126,7 @@
       </p>
     </div>
 
+    <!-- Recipe details display -->
     <div class="recipe">
       <div class="message">
         <div>
@@ -244,6 +250,7 @@
     </div>
   </div>
 
+  <!-- Upload recipe modal -->
   <div class="overlay hidden"></div>
   <div class="add-recipe-window hidden">
     <button class="btn--close-modal">&times;</button>
